--- a/index.html
+++ b/index.html
@@ -14,13 +14,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container d-flex justify-content-center">
       <div class="row">
         <div class="col">
-          <h2>Hello World</h2>
+          <div class="card" id="background">
+            <div class="card-body">
+              <h5 class="card-title text-white">Latar Dinamis</h5>
+              <p class="card-text">
+                Ubah latar ini menhadi sesuai keinginan pengguna
+              </p>
+            </div>
+          </div>
+          <div>
+            <label for="inputHexa" class="my-2">Input Warna</label>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="masukan input warna "
+              aria-label="Username"
+              aria-describedby="addon-wrapping"
+              id="inputHexa"
+              name="inputHexa"
+            />
+          </div>
+          <div class="class btn btn-primary w-100 my-3" onclick="ubahLatar()">
+            Ubah Latar Warna
+          </div>
         </div>
       </div>
     </div>
+
     <script src="main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
